--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,14 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/splash"
+        android:label="EpidemiCare"
+        android:roundIcon="@drawable/splash"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".Login"
-            android:label="@string/app_name">
+            android:label="EpidemiCare">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
