--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,8 @@ dependencies {
 }
 
 dependencies {
+    implementation 'com.android.support:support-v4:26.+'
+}
+dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
