--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,8 @@ dependencies {
     implementation 'com.android.support:support-v4:26.+'
 }
 dependencies {
+    implementation 'com.android.support:support-v4:26.+'
+}
+dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
