--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="archfx.com.epidermicare">
 
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -15,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Login"
+            android:name=".activity.Login"
             android:label="EpidemiCare">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,32 +21,32 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_main"
             android:theme="@style/FullscreenTheme" />
         <activity
-            android:name=".StatusActivity"
+            android:name=".activity.StatusActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_status"
             android:theme="@style/FullscreenTheme" />
         <activity
-            android:name=".ProfileActivity"
+            android:name=".activity.ProfileActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_profile"
             android:theme="@style/FullscreenTheme" />
         <activity
-            android:name=".ReportActivity"
+            android:name=".activity.ReportActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_report"
             android:theme="@style/FullscreenTheme" />
         <activity
-            android:name=".ConfirmActivity"
+            android:name=".activity.ConfirmActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_confirm"
             android:theme="@style/FullscreenTheme" />
         <activity
-            android:name=".SignUpActivity"
+            android:name=".activity.SignUpActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_sign_up"
             android:theme="@style/FullscreenTheme"></activity>
