--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,15 +5,16 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name="archfx.com.epidermicare.app.AppController"
         android:allowBackup="true"
         android:icon="@drawable/splash"
         android:label="EpidemiCare"
-        android:roundIcon="@drawable/splash"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".activity.LoginActivity"
-            android:label="EpidemiCare">
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:windowSoftInputMode="adjustPan" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,35 +22,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.MainActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_main"
-            android:theme="@style/FullscreenTheme" />
-        <activity
-            android:name=".activity.StatusActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_status"
-            android:theme="@style/FullscreenTheme" />
-        <activity
-            android:name=".activity.ProfileActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_profile"
-            android:theme="@style/FullscreenTheme" />
-        <activity
-            android:name=".activity.ReportActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_report"
-            android:theme="@style/FullscreenTheme" />
-        <activity
-            android:name=".activity.ConfirmActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_confirm"
-            android:theme="@style/FullscreenTheme" />
-        <activity
             android:name=".activity.RegisterActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_sign_up"
-            android:theme="@style/FullscreenTheme"></activity>
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".activity.MainActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop" />
     </application>
+
 
 </manifest>
