--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,22 @@
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop" />
+        <activity
+            android:name=".activity.ProfileActivity"
+            android:label="ProfileActivity"
+            android:launchMode="singleTop" />
+        <activity
+            android:name=".activity.ConfirmActivity"
+            android:label="ConfirmActivity"
+            android:launchMode="singleTop" />
+        <activity
+            android:name=".activity.ReportActivity"
+            android:label="ReportActivity"
+            android:launchMode="singleTop" />
+        <activity
+            android:name=".activity.StatusActivity"
+            android:label="StatusActivity"
+            android:launchMode="singleTop" />
     </application>
 
 
