--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,20 @@
     package="archfx.com.epidermicare">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name="archfx.com.epidermicare.app.AppController"
         android:allowBackup="true"
         android:icon="@drawable/splash"
         android:label="EpidemiCare"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        >
+        <receiver android:name=".NetworkStateChecker">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
         <activity
             android:name=".activity.LoginActivity"
             android:label="@string/app_name"
